--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-ui": "^1.4.23",
+    "dayjs": "^1.11.10",
     "pinia": "^2.0.27",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.2.45",
