--- a/package.json
+++ b/package.json
@@ -57,35 +57,37 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080120230428001",
-    "@dcloudio/uni-ui": "^1.4.23",
+    "@dcloudio/uni-ui": "^1.5.2",
     "dayjs": "^1.11.10",
     "pinia": "^2.0.27",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2"
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vue": "^3.4.21",
+    "vue-i18n": "^9.10.2"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.3.2",
+    "@dcloudio/types": "^3.4.8",
     "@dcloudio/uni-automator": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3080120230428001",
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3080120230428001",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080120230428001",
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.11.9",
-    "@uni-helper/uni-app-types": "^0.5.7",
+    "@rushstack/eslint-patch": "^1.7.2",
+    "@types/node": "^18.19.24",
+    "@uni-helper/uni-app-types": "^0.5.12",
     "@uni-helper/uni-ui-types": "0.5.8",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.3",
-    "miniprogram-api-typings": "^3.9.1",
-    "prettier": "^2.7.1",
-    "sass": "^1.56.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.3"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/runtime-core": "^3.2.45",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.23.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.3.0",
+    "miniprogram-api-typings": "^3.12.2",
+    "prettier": "^2.8.8",
+    "sass": "^1.72.0",
+    "typescript": "^5.1.3",
+    "vite": "^4.5.2",
+    "vue-tsc": "^1.8.27"
   }
 }
