--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "sass": "^1.72.0",
     "typescript": "^5.1.3",
     "vite": "^4.5.2",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.27"
   }
 }
